--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -1,4 +1,4 @@
-ul {
+#head  ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -6,16 +6,16 @@ ul {
     background-color: #333;
 }
 
-li {
+#head  li {
     float: left;
     border-right:1px solid #bbb;
 }
 
-li:last-child {
+#head  li:last-child {
     border-right: none;
 }
 
-li a {
+#head  li  a {
     display: block;
     color: white;
     text-align: center;
@@ -23,10 +23,17 @@ li a {
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
+#head  li  a:hover:not(.activeH) {
     background-color: #111;
 }
 
-.active {
+#head .activeH {
     background-color: #4CAF50;
 }
+
+
+
+
+
+
+
