--- a/src/main/webapp/css/project.css
+++ b/src/main/webapp/css/project.css
@@ -8,10 +8,10 @@
 }
 
 #description {
-   float: right;
+   float: left;
     padding: 5px; 
-    width: auto;
-    height: auto; 
+    width: 60%;
+    height: 150px; 
 }
 #imag{
    float: left;
@@ -23,4 +23,39 @@
 	  float: right;
 	    width: auto;
     height: auto; 
+}
+#bodyProject {
+     border-radius: 15px 50px 30px;
+    background-image:url("../images/projects-background.jpg");
+float:left;
+    padding: 20px; 
+    width: 80%;
+    height: 150px;
+   display: inblock;
+    clear:both;
+}
+
+
+
+#menuProj ul {
+    padding: 0;
+}
+
+#menuProj ul li {
+    display: inline;
+}
+
+#menuProj ul li a {
+    background-color: black;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 4px 4px 0 0;
+}
+
+#menuProj ul li a:hover {
+    background-color: orange;
+}
+#menuProj{
+	/* float :left; */
 }
