--- a/src/main/webapp/css/header.css
+++ b/src/main/webapp/css/header.css
@@ -1,4 +1,8 @@
-#head  ul {
+#header{
+	padding: 0 10px;
+}
+
+#header  ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -6,16 +10,16 @@
     background-color: #333;
 }
 
-#head  li {
+#header  li {
     float: left;
     border-right:1px solid #bbb;
 }
 
-#head  li:last-child {
+#header  li:last-child {
     border-right: none;
 }
 
-#head  li  a {
+#header  li  a {
     display: block;
     color: white;
     text-align: center;
@@ -23,13 +27,53 @@
     text-decoration: none;
 }
 
-#head  li  a:hover:not(.activeH) {
+#header  li  a:hover:not(.activeH) {
     background-color: #111;
 }
 
-#head .activeH {
+#header .activeH {
     background-color: #4CAF50;
 }
+
+#ticket-system{
+	font-weight: bold;
+	font-family: "Varela Round" !important;
+}
+
+/*========== Menu style =============*/
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+li {
+    float: left;
+    border-right:1px solid #bbb;
+}
+
+li:last-child {
+    border-right: none;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
+}
+/*========== End menu =============*/
 
 
 
