--- a/src/main/webapp/css/project.css
+++ b/src/main/webapp/css/project.css
@@ -24,7 +24,7 @@
 	    width: auto;
     height: auto; 
 }
-#bodyProject {
+#bodyObject {
      border-radius: 15px 50px 30px;
     background-image:url("../images/projects-background.jpg");
 float:left;
