--- a/src/main/webapp/css/bootstrap.css
+++ b/src/main/webapp/css/bootstrap.css
@@ -4546,7 +4546,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   font-size: 75%;
   font-weight: bold;
   line-height: 1;
-  color: #fff;
+  color: #000;
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
